footer and coming soon image added

--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta
+      name="description"
+      content="This website is about felna which is a waste management company of Bangladesh "
+    />
+    <title>felna | Waste Management</title>
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
@@ -25,6 +30,22 @@
         <li><i class="fa-solid fa-moon" id="icon"></i></li>
       </ul>
     </nav>
+    <main class="container">
+      <img src="./assets/coming-soon.avif" alt="coming soon image" />
+    </main>
+
+    <footer>
+      <div class="footer-content">
+        <p class="address">1042/1175 Kadamtoly Chattogram Bangladesh</p>
+        <p class="copyright">&copy; felna 2024</p>
+        <div class="social-media-icon">
+          <i class="fab fa-facebook"></i>
+          <i class="fab fa-youtube"></i>
+          <i class="fab fa-linkedin"></i>
+          <i class="fab fa-instagram"></i>
+        </div>
+      </div>
+    </footer>
 
     <script>
       let icon = document.getElementById("icon");
