anchor tag added

--- a/index.html
+++ b/index.html
@@ -22,11 +22,22 @@
   <body>
     <nav>
       <ul>
-        <li>Felna <i class="fa-solid fa-recycle"></i></li>
-        <li>Home</li>
-        <li>About</li>
-        <li>Blog</li>
-        <li>Contact Us</li>
+        <a href="#">
+          <li>Felna <i class="fa-solid fa-recycle"></i></li>
+        </a>
+        <a href="#">
+          <li>Home</li>
+        </a>
+        <a href="#">
+          <li>About</li>
+        </a>
+        <a href="#">
+          <li>Blog</li>
+        </a>
+        <a href="#">
+          <li>Contact Us</li>
+        </a>
+
         <li><i class="fa-solid fa-moon" id="icon"></i></li>
       </ul>
     </nav>
@@ -39,10 +50,18 @@
         <p class="address">1042/1175 Kadamtoly Chattogram Bangladesh</p>
         <p class="copyright">&copy; felna 2024</p>
         <div class="social-media-icon">
-          <i class="fab fa-facebook"></i>
-          <i class="fab fa-youtube"></i>
-          <i class="fab fa-linkedin"></i>
-          <i class="fab fa-instagram"></i>
+          <a href="#">
+            <i class="fab fa-facebook"></i>
+          </a>
+          <a href="">
+            <i class="fab fa-youtube"></i>
+          </a>
+          <a href="">
+            <i class="fab fa-linkedin"></i>
+          </a>
+          <a href="">
+            <i class="fab fa-instagram"></i>
+          </a>
         </div>
       </div>
     </footer>
