coming soon image changed

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <nav>
       <ul>
         <a href="#">
-          <li>Felna <i class="fa-solid fa-recycle"></i></li>
+          <li class="logo">Felna <i class="fa-solid fa-recycle"></i></li>
         </a>
         <a href="#">
           <li>Home</li>
@@ -42,7 +42,11 @@
       </ul>
     </nav>
     <main class="container">
-      <img src="./assets/coming-soon.avif" alt="coming soon image" />
+      <img
+        class="coming-soon-img"
+        src="./assets/coming-soon.png"
+        alt="coming soon image"
+      />
     </main>
 
     <footer>
