--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="This website is about felna which is a waste management company of Bangladesh "
+      content="Felna is a leading waste management company in Bangladesh, dedicated to sustainable practices. We implement a comprehensive recycling chain, empowering communities to reduce waste through education and innovative solutions. Our 3R approach (Reduce, Reuse, Recycle) promotes a cleaner, greener future . Discover how Felna's expertise and commitment are driving positive change."
     />
-    <title>felna | Waste Management</title>
+    <title>felna | Reduce Reuse Recycle</title>
 
     <link
       rel="stylesheet"
@@ -31,9 +31,14 @@
         <a href="#">
           <li>About</li>
         </a>
+
+        <a href="#">
+          <li>Events</li>
+        </a>
         <a href="#">
           <li>Blog</li>
         </a>
+        <a href="#"><li>Scrap Price</li></a>
         <a href="#">
           <li>Contact Us</li>
         </a>
