feat: add logo and favicon

--- a/about.html
+++ b/about.html
@@ -3,13 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="./assets/felna-favicon.jpeg" type="image/x-icon" />
-    <meta
-      name="description"
-      content="Felna is a leading waste management company in Bangladesh, dedicated to sustainable practices. We implement a comprehensive recycling chain, empowering communities to reduce waste through education and innovative solutions. Our 3R approach (Reduce, Reuse, Recycle) promotes a cleaner, greener future . Discover how Felna's expertise and commitment are driving positive change."
-    />
-    <title>felna | Reduce Reuse Recycle</title>
-
+    <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
@@ -17,14 +11,13 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-
-    <link rel="stylesheet" href="style.css" />
+    <title>felna | about</title>
   </head>
   <body>
     <nav>
       <ul>
         <a href="#">
-          <li><img id="logo" src="./assets/felna-logo.jpeg" alt="" /></li>
+          <li class="logo">Felna <i class="fa-solid fa-recycle"></i></li>
         </a>
         <a href="#">
           <li>Home</li>
@@ -48,11 +41,26 @@
       </ul>
     </nav>
     <main class="container">
-      <img
-        class="coming-soon-img"
-        src="./assets/coming-soon.png"
-        alt="coming soon image"
-      />
+      <div class="hero__section center">
+        <div class="hero__content">
+          <h1>Transform Your Waste into Value</h1>
+          <p>
+            Felna is a pioneering waste management company in Bangladesh,
+            dedicated to sustainability. We implement a comprehensive recycling
+            chain, empowering communities to reduce waste through education and
+            innovative solutions. Our 3R approach (Reduce, Reuse, Recycle)
+            promotes a cleaner, greener future. Discover how Felna's expertise
+            and commitment are driving positive change.
+          </p>
+        </div>
+        <div class="hero__image">
+          <!-- <img
+            class="coming-soon-img"
+            src="./assets/coming-soon.png"
+            alt="coming soon image"
+          /> -->
+        </div>
+      </div>
     </main>
 
     <footer>
